--- a/calculatorcss.css
+++ b/calculatorcss.css
@@ -49,12 +49,14 @@ height: 100%;
 }
 
 #screen{ 
+    
         border-radius: 5px;
       background-color: cornsilk;
       margin: 5px 17px;
 }
 
 #equation{
+    height: 36px;
     max-width: 300px;
     font-family: 'Orbitron', sans-serif;
     margin:5;
@@ -63,6 +65,7 @@ height: 100%;
 }
 
 #result{
+    height: 50px;
     border-width: 5px;
     margin: 10;
     text-align: end;
