--- a/calculatorcss.css
+++ b/calculatorcss.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
-
+ 
 
 #bigDiv{
    
@@ -25,14 +25,16 @@ height: 100%;
     padding-top: 10px;
     border-radius: 15px;
     border-color: black;
-    border-width: thin;
-    background-image: linear-gradient(25deg, white, gray);
+    border-width: 500px;
+    background-image: linear-gradient(25deg, white, gray, white);
     display: grid;
     grid-template-rows: 1fr 4fr;
     grid-row-gap: 10px;
     max-width: 400px;
+    min-width: 278px;
     height: 500px;
     margin: 25px auto;
+    border: 2px solid
     
     
 }
@@ -41,7 +43,8 @@ height: 100%;
     font-size: 45px;
     padding : 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-column-gap: 5px;
     grid-row-gap: 5px;
     justify-items: center;
@@ -49,10 +52,12 @@ height: 100%;
 }
 
 #screen{ 
-    
-        border-radius: 5px;
-      background-color: cornsilk;
-      margin: 5px 17px;
+    border-width: 2px;
+    border-radius: 5px;
+    background-color: cornsilk;
+    margin: 5px 17px;
+    border: thin solid;
+    max-width: 366px;
 }
 
 #equation{
@@ -61,7 +66,8 @@ height: 100%;
     font-family: 'Orbitron', sans-serif;
     margin:5;
     font-size: 25px;
-    padding :5px 0 0 10px
+    padding :5px 0 0 10px;
+    
 }
 
 #result{
@@ -79,9 +85,27 @@ height: 100%;
     font-size: 35;
     height: 100%;
     width: 100%;
+    border-width: 2px;
+    border-color: rgb(125, 138, 150);
+    border-radius: 15px;
     
 }
 
 :hover {
     background-color: darkkhaki;
 }
+
+#operate{
+    grid-row-start: 3;
+    grid-row-end: 5;
+    grid-column-start: 5;
+    background-image: linear-gradient(white, rgb(90, 189, 90));
+}
+
+#erase{
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column-start:5;
+    grid-column-end: 6;
+}
+
