--- a/calculatorcss.css
+++ b/calculatorcss.css
@@ -43,7 +43,7 @@ height: 100%;
     font-size: 45px;
     padding : 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-column-gap: 5px;
     grid-row-gap: 5px;
@@ -58,6 +58,8 @@ height: 100%;
     margin: 5px 17px;
     border: thin solid;
     max-width: 366px;
+    overflow: hidden;
+    height: 125;
 }
 
 #equation{
